<resources>
    <string name="app_name">Pdf Books</string>
    <string name="raw_name">"@raw/bookanimation"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="or">__________ Or __________</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_name">Password</string>
    <string name="_03xxxxxxxxx">03XXXXXXXXX</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter">Enter the email associated with your account and we  will send an email with instructions to reset your password.</string>
    <string name="enter_the_email_associated_with_your_account_and_we_will_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we will send an email with instructions to reset your password.</string>
    <string name="email_address">Email Address</string>
    <string name="reseet_password">Reset Password</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign__up">Sign Up</string>
</resources>