<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BDCFA"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/welcome_back"
                android:textColor="#0F89EA"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/amethysta"
                android:text="@string/email"
                android:textColor="#0F89EA"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="56dp"
                android:backgroundTint="@color/purple_500"
                android:drawableStart="@drawable/email"
                android:drawablePadding="15dp"
                android:ems="20"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/Password_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/amethysta"

                android:text="@string/password"
                android:textColor="#0F89EA"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Password_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.538" />

            <EditText
                android:id="@+id/Password_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/purple_500"
                android:drawableStart="@drawable/forgot"
                android:drawablePadding="15dp"
                android:ems="20"
                android:hint="@string/enter_your_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="20dp"

                android:singleLine="true"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/signin_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.923"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="187dp"
                android:layout_height="55dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="70dp"
                android:fontFamily="@font/averia_serif_libre_bold"
                android:text="@string/sign_in"
                android:textSize="14sp"
                android:textStyle="bold"
                app:backgroundTint="#1EA8F4"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/forgot_password"
                android:textColor="#1588E4"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/signin_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.874"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password_input"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:buttonTint="#A9ACA5"
                android:fontFamily="@font/amethysta"
                android:text="@string/remember_me"
                android:textColor="#1A92F1"
                android:textSize="13sp"
                android:textStyle="normal|bold"
                app:layout_constraintBottom_toTopOf="@+id/signin_btn"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.366"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password_input"
                app:layout_constraintVertical_bias="0.526"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bookicon"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/amethysta"
        android:text="@string/don_t_have_an_account"
        android:textColor="#7E7979"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.329"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/amethysta"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>