<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9AF2FB"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/bookicon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/averia_serif_libre_bold"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="#3D5AFE"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:hint="@string/username"
                android:textColorHint="#09A0E4"
                app:errorEnabled="false"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/username_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/amethysta"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
                style="@style/Widget.App.TextInputLayout">
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:hint="@string/email"
                android:textColorHint="#09A0E4"
                app:errorEnabled="false"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/amethysta"
                    android:inputType="textWebEmailAddress|textEmailAddress"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
                style="@style/Widget.App.TextInputLayout">
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:hint="@string/_03xxxxxxxxx"
                android:textColorHint="#09A0E4"
                app:errorEnabled="false"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/amethysta"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
                style="@style/Widget.App.TextInputLayout">
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ds"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password_name"
                android:textColorHint="#09A0E4"
                app:errorEnabled="false"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/amethysta"
                    android:inputType="textPassword|textAutoComplete"
                    android:singleLine="true"
                    android:textColorHint="#78909C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
                style="@style/Widget.App.TextInputLayout">
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#09A0E4"
                app:errorEnabled="false"
                tools:ignore="ExtraText">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="30dp"
                    android:fontFamily="@font/amethysta"
                    android:inputType="textPassword|textAutoComplete"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck" />
                style="@style/Widget.App.TextInputLayout">
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:text="Sign Up"
                app:cornerRadius="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="Already have an account?"
                    android:textAlignment="center"
                    android:textColor="#676666"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/login_btn_intent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:text="Log In"
                    android:textColor="#2979FF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>